--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,6 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
-    "query-string": "^5.0.0",
-    "request": "^2.83.0",
+    "query-string": "^5.0.0"
   }
 }
